# slurmdash

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
assets/config/: starter.toml
assets/web/: app.js  index.html  style.css
docs/screenshots/: README.md
migrations/: 20260101000001_initial.sql
src/: actions.rs  cli.rs  config.rs  error.rs  lib.rs  main.rs
src/app/: mod.rs
src/assist/: anthropic.rs  mod.rs  ollama.rs  provider.rs
src/db/: audit.rs  cache.rs  mod.rs  settings.rs  snapshots.rs
src/history/: mod.rs
src/slurm/: hostlist.rs  mod.rs  model.rs  parse.rs  reason.rs  scancel.rs  scontrol.rs  sinfo.rs  squeue.rs  state.rs  version.rs
src/ssh/: local.rs  mod.rs  remote.rs  tail.rs
src/tui/: format.rs  mod.rs  theme.rs
src/tui/widgets/: assist.rs  braille.rs  by_node.rs  by_user.rs  confirm.rs  details.rs  ending_soon.rs  error_banner.rs  footer.rs  header.rs  help.rs  job_table.rs  jobs_totals.rs  kpi.rs  log_viewer.rs  mod.rs  partitions.rs  progress.rs  queue.rs  resources.rs  settings.rs  sparkline.rs  top_users.rs  wait_distribution.rs
src/web/: api.rs  assets.rs  auth.rs  mod.rs  refresh.rs  state.rs
tests/: db_smoke.rs  local_slurm.rs
