[package]
name = "slurmdash"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Terminal user interface for the Slurm workload manager"
license = "GPL-3.0-only"
repository = "https://github.com/the-farshad/slurmdash"
readme = "README.md"
keywords = ["slurm", "hpc", "tui", "ssh", "dashboard"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "time", "sync", "signal", "io-util", "process"] }
futures = "0.3"

ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-textarea = "0.7"

clap = { version = "4", features = ["derive", "env"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

anyhow = "1"
thiserror = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

directories = "5"

chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }

regex = "1"

openssh = "0.11"

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }

# Web UI (Phase 3)
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio", "macros", "query"] }
tower = { version = "0.5", default-features = false }
tower-http = { version = "0.6", default-features = false, features = ["trace"] }
uuid = { version = "1", default-features = false, features = ["v4", "fast-rng"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
